[package]
name = "dao"
version = "0.1.0"
authors = ["[Rafat Hussain] <[rafat.hsn@gmail.com]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.0.0-beta.1", default-features = false, features = ["ownable", "psp34", "reentrancy_guard"] }
toyota_pkg = { path = "../../logics", default-features = false }

[lib]
name = "dao"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "openbrush/std",
    "toyota_pkg/std",
]
ink-as-dependency = []

[profile.dev]
overflow-checks = false
[profile.release]
overflow-checks = false